--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Bilal Ali",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.1.0"
+    "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0"
   }
 }
