--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "carpool",
-  "version": "1.0.0",
-  "description": "Intercity Carpool System",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "carpool"
-  },
-  "author": "Bilal Ali",
-  "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.1.0",
-    "bootstrap-icons": "^1.5.0"
-  }
+    "name": "carpool",
+    "version": "1.0.0",
+    "description": "Intercity Carpool System",
+    "main": "index.html",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "carpool"
+    },
+    "author": "Bilal Ali",
+    "license": "ISC",
+    "dependencies": {
+        "bootstrap": "^5.1.0",
+        "bootstrap-icons": "^1.5.0",
+        "mdb-ui-kit": "^3.9.0"
+    }
 }
