--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "bootstrap": "^5.1.0",
         "bootstrap-icons": "^1.5.0",
+        "jquery": "^3.6.0",
         "mdb-ui-kit": "^3.9.0"
     }
 }
